# cskburn-desktop

./: .editorconfig  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
cskburn-cli/: cskburn-aarch64-apple-darwin  update.sh
src/: App.vue  AppWindow.vue  main.ts  tauri-invoke.d.ts  userError.ts
src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/cskburn-cli/: cskburn-aarch64-apple-darwin  cskburn-aarch64-unknown-linux-gnu  cskburn-x86_64-apple-darwin  cskburn-x86_64-unknown-linux-gnu  update.sh
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  cmds_adb.rs  cmds_hex.rs  cmds_lpk.rs  cmds_md5.rs  cmds_serialport.rs  cmds_string.rs  error.rs  file.rs  main.rs
src-tauri/src/serialport_watcher/: mod.rs  poll.rs
src/components/: DataTableWithFooter.vue  FieldAddr.vue  FieldBase.vue  FieldName.vue  FieldProgress.vue  FieldSize.vue  FileDropper.vue  PartitionEmpty.vue  PartitionList.vue
src/components/common/: FileDropper.vue  FileSize.vue  PartitionTable.vue  PathPicker.vue  SelectableText.vue
src/components/datatable/: FieldAddr.vue  FieldBase.vue
src/components/sections/: AppSettings.vue  AutoUpdater.vue  LogView.vue  PartitionView.vue  PortSelector.vue
src/composables/: busyOn.ts  devices.ts  logWriter.ts  partitions.ts  progress.ts
src/composables/naive-ui/: footerDataTable.ts  slottedDataTable.ts
src/composables/tauri/: app.ts  settings.ts  useListen.ts  window.ts
src/composables/window/: useIntervally.ts
src/utils/: adb.ts  cskburn.ts  file.ts  hex.ts  images.ts  model.ts  readHex.ts  readLpk.ts  revealFile.ts  serialport.ts  strings.ts
