[package]
name = "cskburn-desktop"
version = "0.0.0"
description = "A programming utility for LISTENAI CSK series chips."
repository = "https://github.com/LISTENAI/cskburn-rs"
license = "Apache-2.0"
authors = ["xychen <xychen@listenai.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "dialog-open",
  "fs-create-dir",
  "fs-read-file",
  "fs-remove-file",
  "fs-write-file",
  "path-all",
  "shell-open",
  "shell-sidecar",
] }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
