[package]
name = "cskburn-desktop"
version = "0.1.0"
description = "A programming utility for LISTENAI CSK series chips."
repository = "https://github.com/LISTENAI/cskburn-desktop"
license = "Apache-2.0"
authors = ["xychen <xychen@listenai.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-shell = "2.0.0-beta.4"
tauri-plugin-updater = "2.0.0-beta.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"
ihex = "3.0.0"
thiserror = "1.0.61"
zip = "2.1.0"
md5 = "0.7.0"
rand = "0.8.5"
scopeguard = "1.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Globalization"] }
codepage = "0.1.1"
encoding_rs = "0.8.34"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
wry = { git = "https://github.com/xingrz/wry.git", branch = "hotfix-v0.39.3-dnd" }
