[package]
name = "cskburn-desktop"
version = "1.0.0"
description = "A programming utility for LISTENAI CSK series chips."
repository = "https://github.com/LISTENAI/cskburn-desktop"
license = "Apache-2.0"
authors = ["xychen <xychen@listenai.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-store = "2.4.1"
tauri-plugin-updater = "2.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7.1"
ihex = "3.0.0"
thiserror = "1.0.61"
zip = { version = "2.1.0", features = ["chrono"] }
md5 = "0.7.0"
rand = "0.8.5"
scopeguard = "1.2.0"
chrono = "0.4.41"
adb_client = "2.1.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Globalization"] }
codepage = "0.1.1"
encoding_rs = "0.8.34"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
adb_client = { git = "https://github.com/LISTENAI/adb_client.git", branch = "arcs" }
